# nicels

./: .gitignore  .gitmodules  AGENTS.md  BUILD_README.md  CMakeLists.txt  CMakePresets.json  MIGRATION_NOTES.md  Makefile  README.md
.github/workflows/: ci-build.yml  ci-release.yml  multi-platform-build.yml
DB/: NLS.sqlite3  NLS_DB.sql  NLS_sqlite_schema.sql  build_nls_sqlite.py  sql_migration.json
cmake/NSIS/: CustomPathPage.nsh  NicelsInstallOptions.ini.in  NicelsNSISTemplate.in
cmake/modules/: FindCLI11.cmake  Findlibgit2.cmake
cmake/toolchains/: linux-clang-aarch64.cmake  linux-clang-arm.cmake  linux-clang-x86.cmake  windows-msvc-arm64.cmake
docs/: NiceLS_SDD.docx  NiceLS_SDD_s.docx
icons/: big-list-file-formats.with-icons.xlsx  big-list-file-formats.xlsx  ext_table.xlsx  known-file-extensions-upd.xlsx  known-file-extensions.consolidated.xlsx  known-file-extensions.enriched.csv  known-file-extensions.enriched.xlsx  known-file-extensions.xlsx  nls.ico.b64
include/nicels/: app.h  app.hpp  cli.h  cli.hpp  cli.tpp  cli_formatter.h  color_formatter.hpp  config.h  config.hpp  entry.hpp  filesystem_scanner.hpp  formatter.h  formatter.hpp  formatters.hpp  fs.h  fs_scanner.hpp  git_status.h  git_status.hpp  logger.h  logger.hpp  options.hpp  perf.h  perf.hpp  platform.h  platform.hpp  renderer.h  renderer.hpp  string_utils.hpp  theme.h  theme.hpp  utility.hpp
includes/: app.h  config.h  db_command.h  fs_scanner.h  git_status.h  path_processor.h  platform.h  renderer.h  resources.h  size_formatter.h  string_utils.h  symlink_resolver.h  theme.h  time_formatter.h  version.h  yaml_loader.h
man/: nls.chm
man/linux/: nls.1
man/windows/: build_chm.bat  nls.hhc  nls.hhk  nls.hhp  unblock_chm.ps1
man/windows/topics/: nls.html  styles.css
patch/: copy-user.patch  file_aliases.yaml.patch  files.yaml.patch  folder_aliases.yaml.patch  folders.yaml.patch  icons.cpp.patch  linux-installer.patch
prompts/: basic.txt  cli.json  cli_definition.json  create_tests.json  installable.json  installer.json  lin-installer.json  ls-R-flat.json  migrate-to-cmake.json  refactor-1.json  refactor_task.json  rewrite_readme.json
prompts/refactoring-tasks/: 1-Config.json  10-Perf.json  2-App.json  3-Cli.json  4-FS.json  5-Renderer.json  6-GitStatus.json  7-Theme.json  8-Formatter.json  9-Platform.json
prompts/refactoring-tasks-2/: Task-11.json  Task-12.json  Task-13.json  Task-14.json
src/: app.cpp  cli.cpp  color_formatter.cpp  color_formatter.h  colors.cpp  colors.h  command_line_parser.cpp  command_line_parser.h  config.cpp  config.h  console.cpp  console.h  db_command.cpp  file_info.h  file_ownership_resolver.cpp  file_ownership_resolver.h  filesystem_scanner.cpp  formatters.cpp  fs_scanner.cpp  git_status.cpp  git_status.h  icons.cpp  icons.h  logger.cpp  main.cpp  nls.rc.in  options.h  path_processor.cpp  perf.cpp  perf.h  permission_formatter.cpp  permission_formatter.h  platform.cpp  platform.h  renderer.cpp  resources.cpp  resources.h  size_formatter.cpp  size_formatter.h  string_utils.cpp  (+9 more)
src/core/: app.cpp  cli.cpp  cli_formatter.cpp  config.cpp  fs.cpp  git_status.cpp  logger.cpp
src/nicels/: app.cpp  cli.cpp  config.cpp  fs_scanner.cpp  git_status.cpp  logger.cpp  platform.cpp  renderer.cpp  theme.cpp
src/platform/: platform.cpp
src/render/: formatter.cpp  renderer.cpp  theme.cpp
test/: run_nls_cli_tests.py  test_generate_test_structure.py
test/db-home/.nicels/DB/: NLS.sqlite3
test/expected/: linux_smoke.txt  windows_smoke.txt
test/lin/: file.c  file.out  folder3  smoke.sh
test/lin/folder1/: file.c  file.out
test/win/: .file  dead_link.txt  file.cpp  file.exe.lnk  file.txt  file.xml  file2.xml  file3.xml  folder4  script.ps1  smoke.ps1
test/win/folder1/: file.xml
test/win/folder1/folder3/: file.cmd  pwd.bat  script.ps1
test/win/folder2/: file.ps1
tools/: generate_test_structure.py  install_nls_user.sh  terminal_theme_detector.py  update_cli_reference.py  update_version.py
tools/ci/: validate_linux_package.sh  validate_macos_package.sh  validate_windows_package.ps1
workflows/: multi-platform-build.yml
yaml/: colors.yaml  dark_colors.yaml  file_aliases.yaml  files.yaml  folder_aliases.yaml  folders.yaml  light_colors.yaml  light_theme.yaml
